# lfw-core

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  PROGRESS.md  README.md  defines_evaluation.md
include/lfw-core/: Expression.hpp  Factory.h  LFW.hpp  Signal.hpp  World.h  core.hpp
include/lfw-core/animation/: Animation.h  Animation.hpp  Cosine.h  Cosine.hpp  Delay.h  Delay.hpp  Easing.h  Easing.hpp  IAnimation.h  IAnimation.hpp  Loop.h  Loop.hpp  Periodic.h  Periodic.hpp  Sequence.h  Sequence.hpp  Sine.h  Sine.hpp  Tangent.h  Tangent.hpp
include/lfw-core/base/: ConditionChain.h  ConditionChain.hpp  Expression.h  FPS.h  FPS.hpp  FSM.h  FSM.hpp  Fields.h  Fields.hpp  Graves.h  Graves.hpp  IExpression.hpp  InstFactory.h  InstFactory.hpp  PROGRESS.md  Signal.h  Signal.hpp  dedup.h  get_short_file_size_txt.h  get_team_shadow_color.h  get_team_text_color.h
include/lfw-core/bg/: Background.h  Layer.h
include/lfw-core/buff/: Buff.h  Buff_Electroshock.h  Buff_MagicFlute.h  Buff_MagicFlute2.h
include/lfw-core/defines/: ActionType.hpp  ArmorEnum.hpp  ArmorType.hpp  BackgroundGroup.hpp  BdyKind.hpp  BinOp.hpp  BotState.hpp  BotVal.hpp  Builtin_FrameId.hpp  CMD.hpp  CPointKind.hpp  ChaseLost.hpp  CheatType.hpp  CollisionVal.hpp  CtrlDevice.hpp  DatEnum.hpp  DatTypeEnum.hpp  Defines.hpp  Difficulty.hpp  EMPTY_FRAME_INFO.hpp  ENUM_CONVERSION.md  EntityGroup.hpp  EntityType.hpp  EntityVal.hpp  EnumHelper.hpp  EnumTypes.hpp  FacingFlag.hpp  FrameBehavior.hpp  GONE_FRAME_INFO.hpp  GameKey.hpp  HitFlag.hpp  IArmorInfo.hpp  IBaseData.hpp  IBdyInfo.hpp  IBgData.hpp  IBgInfo.hpp  IBgLayerInfo.hpp  IBotAction.hpp  IBotData.hpp  IBotDataSet.hpp  (+64 more)
include/lfw-core/defines/actions/: ActionType.hpp  IAction_ABuff.hpp  IAction_Base.hpp  IAction_Broadcast.hpp  IAction_BrokenDefend.hpp  IAction_Defend.hpp  IAction_Error.hpp  IAction_Fusion.hpp  IAction_NextFrame.hpp  IAction_ReboundVX.hpp  IAction_SetProp.hpp  IAction_Sound.hpp  IAction_StealValue.hpp  IAction_TurnFace.hpp  IAction_TurnTeam.hpp  IAction_VBuff.hpp  IPos.hpp  PROGRESS.md  TAction.hpp
include/lfw-core/ditto/: Ditto.h
include/lfw-core/entity/: EnterFrameResult.h  Entity.h  Entity.hpp  EntityCallbacks.h  LFW.hpp  Lfw.hpp  StatBarType.h  calc_v.h  face_helper.h  find_frame_direction.h  type_check.h
include/lfw-core/state/: BallState_Base.h  CharacterState_Base.h  CharacterState_Burning.h  CharacterState_Caught.h  CharacterState_Dash.h  CharacterState_Drink.h  CharacterState_Falling.h  CharacterState_Frozen.h  CharacterState_Injured.h  CharacterState_Jump.h  CharacterState_Lying.h  CharacterState_Rowing.h  CharacterState_Running.h  CharacterState_Standing.h  CharacterState_Teleport2FarthestAlly.h  CharacterState_Teleport2NearestEnemy.h  CharacterState_Transform2LouisEX.h  CharacterState_Walking.h  ENTITY_STATES.h  StateBase_Proxy.h  State_15.h  State_Base.hpp  State_Burning.h  State_TransformTo8XXX.h  State_TransformToCatching.h  State_WeaponBroken.h  States.h  WeaponState_Base.h  WeaponState_InTheSky.h  WeaponState_OnGround.h  WeaponState_OnHand.h  WeaponState_Throwing.h  spawn_buring_smoke.hpp  spawn_ice_piece.h
include/lfw-core/utils/: PROGRESS.md
include/lfw-core/utils/ease_method/: PROGRESS.md
include/lfw-core/utils/easing/: EasingLinear.hpp  EasingQuint.hpp  EasingSine.hpp  IEasing.hpp  PROGRESS.md
include/lfw-core/utils/math/: MT.hpp  Math.hpp  PROGRESS.md  Times.hpp
include/lfw-core/utils/schema/: PROGRESS.md
include/lfw-core/utils/string_parser/: detail.hpp  match_all.hpp  match_block.hpp  match_colon_value.hpp  match_hash_end.hpp  take_blocks.hpp  take_sections.hpp
src/: Factory.cpp  LFW.cpp  condition_chain_demo.cpp  core.cpp  expression_demo.cpp  fields_demo.cpp  fps_demo.cpp  fsm_demo.cpp  graves_demo.cpp  instfactory_demo.cpp  json_reflection_demo.cpp  main.cpp  math_demo.cpp  signal_demo.cpp
src/animation/: Animation.cpp  Easing.cpp  Loop.cpp  Sequence.cpp
src/bg/: Background.cpp
src/buff/: Buff.cpp  Buff_Electroshock.cpp  Buff_MagicFlute.cpp  Buff_MagicFlute2.cpp
src/entity/: Entity.cpp  LFW.cpp
src/state/: CharacterState_Caught.cpp  CharacterState_Dash.cpp  CharacterState_Falling.cpp  CharacterState_Frozen.cpp  CharacterState_Injured.cpp  CharacterState_Jump.cpp  CharacterState_Lying.cpp  CharacterState_Running.cpp  CharacterState_Standing.cpp  CharacterState_Walking.cpp  ENTITY_STATES.cpp  State_Base.cpp  State_WeaponBroken.cpp  States.cpp  WeaponState_Base.cpp  WeaponState_InTheSky.cpp  WeaponState_OnGround.cpp  WeaponState_OnHand.cpp  WeaponState_Throwing.cpp
tests/: CMakeLists.txt  test_condition_chain.cpp  test_core.cpp  test_enum_strings.cpp  test_expression.cpp  test_fields.cpp  test_fps.cpp  test_fsm.cpp  test_graves.cpp  test_instfactory.cpp  test_json_reflection.cpp  test_math.cpp  test_signal.cpp  test_string_parser.cpp  test_times.cpp
